--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gambling-game",
   "version": "0.1.0",
-  "homepage": "https://liamsherlock10.github.io/SlotsForTots",
+  "homepage": "https://liamsherlock10.github.io/SlotsForTots/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -12,8 +12,7 @@
     "react-router-dom": "^6.28.0",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
-  },
-  "scripts": {
+  },  "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
